# llm

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-package-ci.yml
src/llm/: __init__.py  bpe_tokenizer.py  causal_attention.py  data.py  dataset.py  feed_forward.py  gelu.py  layer_norm.py  model.py  multi_head_attention.py  multi_head_swa.py  post_train.py  self_attention.py  simple_tokenizer.py  simple_tokenizer_v1.py  train.py  transformer_block.py  utils.py
src/llm/configs/: llm_1.7b.yaml  llm_3.55b.yaml  llm_8b.yaml
tests/: __init__.py  conftest.py  mocks.py  test_bpe_encoder.py  test_causal_attention.py  test_data.py  test_dataset.py  test_feed_forward.py  test_gelu.py  test_layer_norm.py  test_llm.py  test_model.py  test_multi_head_attention.py  test_multi_head_swa.py  test_self_attention.py  test_simple_tokenizer.py  test_simple_tokenizer_v1.py  test_train.py  test_transformer_block.py  test_utils.py
tests/resources/: dataset.csv
